--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: url("/assets/images/background.svg") repeat;
   background-position: 0;
 }
@@ -26,8 +26,8 @@ div.container {
 .header {
   position: fixed;
   bottom: 0;
-  width: 100vw;
-  height: 10vh;
+  width: 100%;
+  height: 12.5%;
   background: transparent;
   backdrop-filter: blur(2.5px);
   font-family: "Electrolize", Arial, sans-serif;
@@ -78,7 +78,7 @@ div.container {
     rgb(140, 0, 255)
   );
   background-clip: text;
-  background-size: 180% 460%;
+  background-size: 150% 500%;
   -webkit-text-fill-color: transparent;
   animation: rainbow 5s ease infinite;
   transform: translateY(-50%) scale(1.25);
@@ -88,37 +88,36 @@ div.container {
   .header {
     display: grid;
     top: 0;
-    height: 10px;
-    width: 100vw;
+    height: 10%;
+    width: 100%;
     backdrop-filter: none;
     grid-template-columns: 1fr 1fr;
   }
 
   .title {
-    padding: 2vw;
+    padding: 5%;
     display: flex;
     align-items: center;
   }
 
   .title img {
-    height: 3vw;
-    width: 3vw;
+    width: 7.5%;
   }
 
   .title h1 {
-    margin-left: 1vw;
+    margin-left: 2.5%;
     font-size: 2vw;
     color: cadetblue;
   }
 
   .navigation {
-    padding: 2vw;
+    padding: 5%;
     display: flex;
     justify-content: end;
   }
 
   .navigation a {
-    font-size: 1.75vw;
+    font-size: 2vw;
     margin-left: 3vw;
   }
 
@@ -134,12 +133,12 @@ div.container {
 
 @keyframes rainbow {
   0% {
-    background-position: 0% 350%;
+    background-position: 0% 0%;
   }
   50% {
-    background-position: 100% 0%;
+    background-position: 100% 200%;
   }
   100% {
-    background-position: 0% 350%;
+    background-position: 0% 0%;
   }
 }
