--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   height: 100%;
   background: url("/assets/images/background.svg") repeat;
   background-position: 0;
-  overflow-x: hidden;
 }
 
 main.container {
@@ -42,6 +41,7 @@ main.container {
 }
 
 .navigation {
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-around;
@@ -55,7 +55,7 @@ main.container {
 }
 
 .navigation i {
-  font-size: 7vw;
+  font-size: 6vw;
 }
 
 .navigation a:hover {
@@ -85,29 +85,41 @@ main.container {
   transform: translateY(-50%) scale(1.25);
 }
 
+.dot-blur {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -65%);
+  width: 150vw;
+  height: 50vw;
+  background: radial-gradient(closest-side, rgba(0, 255, 149, 0.25),  rgba(0, 0, 0, 0))
+}
+
 @media screen and (min-width: 768px) {
   .header {
-    display: grid;
     top: 0;
-    height: 10%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 15%;
     width: 100%;
     backdrop-filter: none;
-    grid-template-columns: 1fr 1fr;
   }
 
   .title {
     padding: 5%;
     display: flex;
     align-items: center;
+    justify-content: start;
   }
 
   .title img {
-    width: 7.5%;
+    width: 10%;
   }
 
   .title h1 {
     margin-left: 2.5%;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: cadetblue;
   }
 
@@ -116,18 +128,17 @@ main.container {
     display: flex;
     justify-content: end;
   }
-
+  
   .navigation a {
-    font-size: 1.4rem;
-    margin-left: 0.5rem;
-    padding: 0;
+    margin-right: 2rem;
   }
+
   .navigation a::before {
     content: none;
   }
 
   .navigation a i {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 
   .navigation .active {
@@ -137,17 +148,10 @@ main.container {
 }
 
 @media screen and (min-width: 1024px) {
-  .title h1 {
-    font-size: 2rem;
-  }
-
   .navigation a {
-    font-size: 1.8rem;
-    margin-left: 2rem;
-  }
-
-  .navigation a i {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
+    white-space: nowrap;
+    margin-right: 1.25rem;
   }
 }
 
