--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ main.container {
   bottom: 0;
   left: 50%;
   transform: translate(-50%, 80%);
-  display: none;
+  opacity: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -161,11 +161,11 @@ main.container {
   }
 
   .dot-blur-1 {
-    display: none;
+    opacity: 0;
   }
 
   .dot-blur-2 {
-    display: block;
+    opacity: 1;
   }
 }
 
