--- a/style.css
+++ b/style.css
@@ -20,8 +20,7 @@ main.container {
   left: 0;
   width: 100%;
   height: 100%;
-  transition: transform 0.5s cubic-bezier(0.5, 0, 0.3, 0),
-    opacity 0.5s cubic-bezier(0.5, 0, 0.3, 0);
+  transition: opacity 0.5s cubic-bezier(0.5, 0, 0.3, 0);
 }
 
 .header {
@@ -93,7 +92,7 @@ main.container {
   width: 150vw;
   height: 50vw;
   backdrop-filter: blur(1px);
-  background: radial-gradient(closest-side, var(--dot-blur),  rgba(0, 0, 0, 0))
+  background: radial-gradient(closest-side, var(--dot-blur), rgba(0, 0, 0, 0));
 }
 
 .dot-blur-1 {
@@ -142,7 +141,7 @@ main.container {
     display: flex;
     justify-content: end;
   }
-  
+
   .navigation a {
     margin-left: 2rem;
   }
