--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+  transition:
+    background-color 0.25s ease-in-out,
+    color 0.25s ease-in-out;
 }
 
 body {
   width: 100%;
   height: 100%;
-  background: url("/assets/images/background.svg") repeat;
   background-position: 0;
 }
 
@@ -81,33 +82,6 @@ main.container {
   transform: translateY(-50%) scale(1.25);
 }
 
-.dot-blur {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-}
-
-.dot-blur div {
-  position: fixed;
-  width: 150vw;
-  height: 50vw;
-  backdrop-filter: blur(1px);
-  background: radial-gradient(closest-side, var(--dot-blur), rgba(0, 0, 0, 0));
-}
-
-.dot-blur-1 {
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, -70%);
-}
-
-.dot-blur-2 {
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, 80%);
-  opacity: 0;
-}
-
 @media screen and (min-width: 768px) {
   .header {
     top: 0;
@@ -157,14 +131,6 @@ main.container {
   .navigation .active {
     font-weight: bolder;
     transform: scale(1.1);
-  }
-
-  .dot-blur-1 {
-    opacity: 0;
-  }
-
-  .dot-blur-2 {
-    opacity: 1;
   }
 }
 
