--- a/css/palettes/nekitori17.css
+++ b/css/palettes/nekitori17.css
@@ -1,16 +1,14 @@
 :root {
-  --title-page: cadetblue;
+  --title-page: #00b3b3;
 
-  --header-primary: #4cffcf;
-  --header-secondary: #28c5bd;
+  --header-primary: #00ffcc;
+  --header-secondary: #00bfa6;
 
-  --link: dodgerblue;
-  --link-hover: #04ff35;
+  --link: #008cff;
+  --link-hover: #00ff3c;
 
-  --dot-blur: rgba(0, 255, 149, 0.25);
-
-  --gradient-1: #8c00ff;
-  --gradient-2: #0400ff;
-  --gradient-3: #00fff2;
-  --gradient-4: #bbff00;
+  --gradient-1: #a100ff;
+  --gradient-2: #1a00ff;
+  --gradient-3: #00fff0;
+  --gradient-4: #ccff00;
 }
