--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-  background-color: #161616;
+  background-color: var(--background-color);
   background-image: url("/assets/images/pattern.svg");
   background-repeat: repeat;
   background-size: 
