--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,13 @@ body {
   height: 100%;
 }
 
-body {
+main.app {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
   background-color: var(--background-color);
   background-image: url("/assets/images/pattern.svg");
   background-repeat: repeat;
@@ -23,7 +29,7 @@ body {
   animation: bg-pattern-move 140s linear infinite;
 }
 
-body::before {
+main.app::before {
   content: "";
   position: fixed;
   inset: 0;
@@ -39,7 +45,7 @@ body::before {
   mix-blend-mode: soft-light;
 }
 
-body::after {
+main.app::after {
   content: "";
   position: fixed;
   inset: 0;
@@ -72,7 +78,7 @@ body::after {
   }
 }
 
-main.container {
+div.container {
   position: absolute;
   top: 0;
   left: 0;
@@ -156,11 +162,11 @@ main.container {
 }
 
 @media screen and (min-width: 768px) {
-  body {
+  main.app {
     background-size: clamp(250px, 35vw, 320px) clamp(250px, 35vw, 320px);
   }
 
-  body::before {
+  main.app::before {
     background-size: clamp(180px, 25vw, 250px) clamp(180px, 25vw, 250px);
   }
 
@@ -216,11 +222,11 @@ main.container {
 }
 
 @media screen and (min-width: 1024px) {
-  body {
+  main.app {
     background-size: 320px 320px;
   }
 
-  body::before {
+  main.app::before {
     background-size: 250px 250px;
   }
 
@@ -232,7 +238,7 @@ main.container {
 }
 
 @media screen and (min-width: 1440px) {
-  body {
+  main.app {
     background-size: 320px 320px;
   }
 }
